force-app/main/default/objects/Blocking_Details__c/Blocking_Details__c.object-meta.xml
<CustomObject>
    <label>Blocking Details</label>
    <nameField>
        <displayFormat>Block Detail-{00}</displayFormat>
        <label>Blocking Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocking Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>