force-app/main/default/objects/Blocking_Details__c/fields/Blocked_by_token__c.field-meta.xml
<CustomField>
    <fullName>Blocked_by_token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked by token</label>
    <type>Checkbox</type>
</CustomField>