force-app/main/default/objects/Blocking_Details__c/fields/Blocking_Comment__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Comment__c</fullName>
    <label>Blocking Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>