force-app/main/default/objects/Blocking_Details__c/fields/Blocking_Information__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Information__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&apos;Blocked&apos;), &apos;This record has been Blocked by &apos; + CreatedBy.FirstName + CreatedBy.LastName + &apos;.&apos;, &apos;This record has been Released by &apos; + CreatedBy.FirstName + CreatedBy.LastName + &apos;.&apos; )
+ if( (ISPICKVAL(Status__c , &apos;Blocked&apos;) &amp;&amp; ( $User.Id != CreatedById)), &apos;You do not have the necessary permissions to modify the status&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocking Information</label>
    <type>Text</type>
</CustomField>