force-app/main/default/objects/Blocking_Details__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Blocking Details</relationshipLabel>
    <relationshipName>Blocking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>